deployments/uservice-ghslacker/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uservice-ghslacker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "api-lsst-codes-letsencrypt"
spec:
  tls:
    - secretName: api-lsst-codes-ingress-tls
      hosts:
        - api-1.lsst.codes
        - api-2.lsst.codes
  hosts:
    - host: api-1.lsst.codes
      http: &http_rules
        paths:
          - path: "/ghslacker/*"
            backend:
              serviceName: u-ghslacker
              servicePort: 5000
    - host: api-2.lsst.codes
      http: *http_rules
